syntax = "proto3";

package api;

option go_package = "github.com/erikbayerlein/mult-protocol-clients/internal/pb";

message Requisicao {
  oneof conteudo {
    Auth auth = 1;
    Operacao operacao = 2;
  }
}

message Auth {
  string aluno_id  = 1;
  string timestamp = 2;
}

message Operacao {
  string token         = 1;
  string nome_operacao = 2;
  map<string,string> parametros = 3;
  string timestamp     = 4;
}

message Resposta {
  OperacaoResponse operacao = 1;
}

message OperacaoResponse {
  bool  sucesso   = 1;
  map<string,string> resultado = 2;
  string timestamp = 3;
}
